@@ -5,10 +5,12 @@ import com.healthnest.model.Appointment;
 import com.healthnest.service.AppointmentService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.mockito.*;
 import org.springframework.http.ResponseEntity;
 
 import java.time.LocalDate;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -16,114 +18,93 @@ import static org.mockito.Mockito.*;
 
 class AppointmentControllerTest {
 
+    @InjectMocks
     private AppointmentController appointmentController;
+
+    @Mock
     private AppointmentService appointmentService;
 
     @BeforeEach
     void setUp() {
-        appointmentService = mock(AppointmentService.class);
-        appointmentController = new AppointmentController();
-
-    
-        try {
-            var serviceField = AppointmentController.class.getDeclaredField("appointmentService");
-            serviceField.setAccessible(true);
-            serviceField.set(appointmentController, appointmentService);
-        } catch (Exception e) {
-            throw new RuntimeException(e);
-        }
+        MockitoAnnotations.openMocks(this);
     }
 
     @Test
-    void testGetTodayAppointmentsByDoctor() {
+    void getTodayAppointmentsByDoctor_shouldReturnAppointments() {
         Integer doctorId = 1;
         LocalDate today = LocalDate.now();
-
-        AppointmentShowDTO dto = new AppointmentShowDTO();
-        dto.setDoctorName("Dr. John");
-
-        when(appointmentService.getTodayAppointmentsByDoctor(doctorId, today))
-                .thenReturn(List.of(dto));
+        List<AppointmentShowDTO> dtos = Arrays.asList(new AppointmentShowDTO(), new AppointmentShowDTO());
+        when(appointmentService.getTodayAppointmentsByDoctor(doctorId, today)).thenReturn(dtos);
 
         ResponseEntity<List<AppointmentShowDTO>> response = appointmentController.getTodayAppointmentsByDoctor(doctorId, today);
 
-        assertEquals(200, response.getStatusCodeValue());
-        assertEquals(1, response.getBody().size());
-        assertEquals("Dr. John", response.getBody().get(0).getDoctorName());
+        assertEquals(2, response.getBody().size());
+        verify(appointmentService).getTodayAppointmentsByDoctor(doctorId, today);
     }
 
     @Test
-    void testGetTodayAppointmentsByDoctor_NullDate() {
+    void getTodayAppointmentsByDoctor_shouldThrowExceptionIfDateNull() {
         Integer doctorId = 1;
-        LocalDate date = null;
-        
-        assertThrows(IllegalArgumentException.class, () -> 
-            appointmentController.getTodayAppointmentsByDoctor(doctorId, date));
+        assertThrows(IllegalArgumentException.class, () ->
+            appointmentController.getTodayAppointmentsByDoctor(doctorId, null)
+        );
     }
 
     @Test
-    void testGetAppointmentsByDoctor() {
-        Integer doctorId = 1;
-
-        AppointmentShowDTO dto1 = new AppointmentShowDTO();
-        dto1.setDoctorName("Dr. Smith");
-
-        AppointmentShowDTO dto2 = new AppointmentShowDTO();
-        dto2.setDoctorName("Dr. Smith");
-
-        when(appointmentService.getAppointments(doctorId))
-                .thenReturn(Arrays.asList(dto1, dto2));
+    void getAppointmentsByDoctor_shouldReturnAppointments() {
+        Integer doctorId = 2;
+        List<AppointmentShowDTO> dtos = Collections.singletonList(new AppointmentShowDTO());
+        when(appointmentService.getAppointments(doctorId)).thenReturn(dtos);
 
         ResponseEntity<List<AppointmentShowDTO>> response = appointmentController.getAppointmentsByDoctor(doctorId);
 
-        assertEquals(200, response.getStatusCodeValue());
-        assertEquals(2, response.getBody().size());
-        assertEquals("Dr. Smith", response.getBody().get(0).getDoctorName());
+        assertEquals(1, response.getBody().size());
+        verify(appointmentService).getAppointments(doctorId);
     }
 
     @Test
-    void testAcceptAppointment() {
-        Integer appointmentId = 10;
-        Integer doctorId = 5;
-
-        Appointment mockAppointment = new Appointment();
-        mockAppointment.setAppointmentId(appointmentId);
-
-        when(appointmentService.acceptAppointment(appointmentId, doctorId))
-                .thenReturn(mockAppointment);
+    void acceptAppointment_shouldReturnUpdatedAppointment() {
+        Integer appointmentId = 10, doctorId = 5;
+        Appointment appointment = new Appointment();
+        when(appointmentService.acceptAppointment(appointmentId, doctorId)).thenReturn(appointment);
 
         ResponseEntity<Appointment> response = appointmentController.acceptAppointment(appointmentId, doctorId);
 
-        assertEquals(200, response.getStatusCodeValue());
-        assertEquals(appointmentId, response.getBody().getAppointmentId());
+        assertEquals(appointment, response.getBody());
+        verify(appointmentService).acceptAppointment(appointmentId, doctorId);
     }
 
     @Test
-    void testAcceptAppointment_Unauthorized() {
-        Integer appointmentId = 1;
-        Integer doctorId = 2;
-        
-        when(appointmentService.acceptAppointment(appointmentId, doctorId))
-            .thenThrow(new RuntimeException("You are not authorized to accept this appointment"));
-            
-        assertThrows(RuntimeException.class, () -> 
-            appointmentController.acceptAppointment(appointmentId, doctorId));
-    }
-
-    @Test
-    void testRejectAppointment() {
-        Integer appointmentId = 20;
-        Integer doctorId = 3;
-
-        Appointment mockAppointment = new Appointment();
-        mockAppointment.setAppointmentId(appointmentId);
-
-        when(appointmentService.rejectAppointment(appointmentId, doctorId))
-                .thenReturn(mockAppointment);
+    void rejectAppointment_shouldReturnUpdatedAppointment() {
+        Integer appointmentId = 11, doctorId = 6;
+        Appointment appointment = new Appointment();
+        when(appointmentService.rejectAppointment(appointmentId, doctorId)).thenReturn(appointment);
 
         ResponseEntity<Appointment> response = appointmentController.rejectAppointment(appointmentId, doctorId);
 
-        assertEquals(200, response.getStatusCodeValue());
-        assertEquals(appointmentId, response.getBody().getAppointmentId());
+        assertEquals(appointment, response.getBody());
+        verify(appointmentService).rejectAppointment(appointmentId, doctorId);
+    }
+
+    @Test
+    void getAllDoctorsCount_shouldReturnCount() {
+        when(appointmentService.getAllAppointments()).thenReturn(Arrays.asList(new AppointmentShowDTO(), new AppointmentShowDTO()));
+
+        ResponseEntity<Integer> response = appointmentController.getAllDoctorsCount();
+
+        assertEquals(2, response.getBody());
+        verify(appointmentService).getAllAppointments();
+    }
+
+    @Test
+    void changeStatus_shouldReturnStatusString() {
+        Integer appointmentId = 7;
+        String setStatus = "Completed";
+        when(appointmentService.changeStatus(appointmentId, setStatus)).thenReturn("Status Updated");
+
+        ResponseEntity<String> response = appointmentController.changeStatus(appointmentId, setStatus);
+
+        assertEquals("Status Updated", response.getBody());
+        verify(appointmentService).changeStatus(appointmentId, setStatus);
     }
 }
